--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-hbs": "^1.0.4",
+    "path": "^0.12.7",
     "stripe": "^5.3.0"
   }
 }
