--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "homepage": "https://github.com/VegFest/members.vegfest.org#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-hbs": "^1.0.4",
     "path": "^0.12.7",
-    "stripe": "^5.3.0"
+    "stripe": "^5.4.0"
   }
 }
