--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-hbs": "^1.0.4",
+    "mongoose": "^5.2.4",
     "path": "^0.12.7",
     "stripe": "^5.4.0"
   }
